# agent-core

./: README.md  __init__.py  config.py  engine.py  llm.py  pyproject.toml  rule.py  schema.py  skill.py  tool.py
contrib/: __init__.py  json_memory.py  json_skill.py  mcp_bridge.py
docs/: api.md  architecture.md  changelog.md  guide.md
memory/: engine.py  provider.py
skill/: __init__.py  provider.py  skill.py
